# Crystal

./: .gitignore  CONTRIBUTING.md  CRON_HEARTBEAT_NOTES.md  LICENSE  PERFORMANCE_NOTES.md  README.md  SECURITY.md  chat_template.jinja  docker-compose.yml  index.html  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
mogwai/: README.md  index.html  package-lock.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
mogwai/scripts/: _download_models.py  nvidia_tts_worker.py  requirements.txt  start-tts.ps1  whisper_server.py
mogwai/src-tauri/: build.rs  tauri.conf.json
scripts/: _check_gpu.py  mempalace_query.py  nvidia_stt_worker.py  nvidia_tts_worker.py  openclaw-allowlist-exe.ps1  requirements.txt  setup.ps1  start-all.ps1  start-tts.ps1  start-whisper.ps1  start_voice_servers.py  tts_server.py  vllm-docker.ps1  voice_gateway.py  whisper_server.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/__tests__/: appStore.test.ts  cache.test.ts  cityGamify.test.ts  navigation.test.ts  openclaw.test.ts  securityAudit.test.ts  skillsCli.test.ts  themeStore.test.ts
src/components/: LobsterIcon.tsx
src/hooks/: useGlobalShortcut.ts  useKeyboardShortcuts.ts  useOpenClaw.ts  useStorage.ts  useVoice.ts
src/lib/: agent.ts  cache.ts  factory.ts  (+13 more)
(+135 files in other folders)
